--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>DeveloperKumo</title>
 </head>
 <body>
+    <a href="/testpage.html"><button>test page</button></a>
     <h1>Home Page</h1>
 </body>
 </html>
