updated index.html to link to projects and contact html files.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </li>
             <div class="divider divider-horizontal"></div>
             <li class="flex text-indigo-50 no-underline text-base md:text-2xl lg:text-4xl">
-                <a class="" href="projects.html">Projects</a>
+                <a class="" href="/pages/projects.html">Projects</a>
             </li>
             <div class="divider divider-horizontal"></div>
 
@@ -27,7 +27,7 @@
             <div class="divider divider-horizontal"></div>
 
             <li class="flex text-indigo-50 no-underline text-base md:text-2xl lg:text-4xl">
-                <a class="" hx-get="/contact" hx-trigger="click" hx-target="#main_content" hx-swap="outerHTML">Contact</a>
+                <a class="" hx-get="/pages/contact.html" hx-trigger="click" hx-target="#main_content" hx-swap="outerHTML">Contact</a>
             </li>
         </ul>
     </div>
