updated index and projects html files

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </li>
             <div class="divider divider-horizontal"></div>
             <li class="flex text-indigo-50 no-underline text-base md:text-2xl lg:text-4xl">
-                <a class="" href="/pages/projects.html">Projects</a>
+                <a class="" hx-get="/pages/projects.html" hx-trigger="click" hx-target="#main_content" hx-swap="outerHTML">Projects</a>
             </li>
             <div class="divider divider-horizontal"></div>
 
